# pluto-sdr-pr

./: .dockerignore  .flake8  .gitignore  .latexmkrc  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.json  LICENSE  README.md  cSpell.json  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/latex/: Dockerfile
.github/workflows/: doc-build.yml  doc-lint.yml  pytest.yml  quality-check.yml  self-check.yml
docu/: .latexmkrc  references.bib  report.aux  report.bcf  report.blg  report.fdb_latexmk  report.fls  report.lof  report.run.xml  report.tex  report.toc
docu/report/: aufbau.aux  aufbau.tex  aufbau.tex.aux  ausblick.aux  ausblick.tex  ausblick.tex.aux  deklaration.tex  durchführung.aux  durchführung.tex  durchführung.tex.aux  einleitung.aux  einleitung.tex  einleitung.tex.aux  ergebnisse.aux  ergebnisse.tex  ergebnisse.tex.aux  grundlagen.aux  grundlagen.tex  grundlagen.tex.aux  hardware.aux  hardware.tex  titelpage.aux  titelpage.tex  titelpage.tex.aux  zusammenfassung.tex
notebooks/: ambiguity_plot.ipynb  ambiguity_plot_colab.ipynb  animated_plot.ipynb  clean_algorithm.ipynb  full_pipeline.ipynb  signal_synchro.ipynb
pluto_sdr_pr/: ioutils.py  processing.py  signal.py
resources/: project.dict
rtl_sdr_pr/: __init__.py  ioutils.py  processing.py  signal.py
tests/: test_rtl_sdr_pr.py
tests/data/: 200samples_625000000_2880000.raw  300samples.sdriq  header-only.sdriq
