[tool.poetry]
name = "rtl-sdr-pr"
version = "0.1.0"
description = "Turning cheap RTL-SDR receivers into passive radar sensors"
authors = ["Andreas Baulig <@ChiefGokhlayeh>", "Wolfgang Bradfisch <@Braafisch>"]
repository = "https://github.com/ChiefGokhlayeh/rtl-sdr-pr"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ipykernel = "^6.0.3"
ipympl = "^0.7.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
nose = "^1.3.7"
numpy = "^1.21.1"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.13.0"
black = "^21.7b0"
rope = "^0.19.0"
flake8 = "^3.9.2"
nbstripout = "^0.5.0"
poetry2conda = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.poetry2conda]
name = "rtl-sdr-pr"

[tool.poetry2conda.dependencies]
numpy = { channel = "conda-forge" }
