[project]
name = "pluto-sdr-pr"
version = "0.1.0"
description = "Turning cheap Pluto-SDR receivers into passive radar sensors"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [{ name = "Andreas Baulig" }, { name = "Wolfgang Bradfisch" }]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
repository = "https://github.com/ChiefGokhlayeh/pluto-sdr-pr"

[tool.black]
line-length = 80

[tool.pyright]
include = ["pluto_sdr_pr", "notebooks", "tests"]
